<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PedidoActivity"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/Email_pedido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_pedido"/>

    <TextView
        android:id="@+id/Text_direccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Email_pedido"
        android:text="@string/TextView_Direccion_Pedido">
    </TextView>

    <EditText
        android:id="@+id/Calle_pedido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Text_direccion"
        android:hint="@string/calle_pedido"/>

    <EditText
        android:id="@+id/Numero_calle_pedido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Calle_pedido"
        android:hint="@string/numero_calle_pedido"/>

    <Spinner
        android:id="@+id/Spinner_ciudades"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Numero_calle_pedido"
        android:entries="@array/spinner_ciudades"/>

    <TextView
        android:id="@+id/Text_tipo_pedido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Spinner_ciudades"
        android:text="@string/tipo_pedido"/>

    <RadioGroup
        android:id="@+id/Tipo_pedido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/Text_tipo_pedido"
        android:layout_centerInParent="true"
        android:layout_gravity="center_horizontal">

        <RadioButton
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:text="@string/pedido_envio" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pedido_takeaway" />
    </RadioGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_platos_pedido"
        android:scrollbars="vertical"
        android:layout_below="@id/Tipo_pedido"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"/>

    <Button
        android:id="@+id/Agregar_platos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/recycler_view_platos_pedido"
        android:layout_centerInParent="true"
        android:onClick="onClickAgregarPlatos"
        android:text="@string/agregar_platos" />

    <Button
        android:id="@+id/Finalizar_pedido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Agregar_platos"
        android:layout_centerInParent="true"
        android:onClick="onClickPedir"
        android:text="@string/finalizar_pedido" />


</RelativeLayout>